AM_CXXFLAGS = -Wall -Weffc++ -Wextra

lib_LTLIBRARIES = libmadoka.la

libmadoka_la_SOURCES = \
  file.cc \
  sketch.cc

libmadoka_includedir = ${includedir}/madoka
libmadoka_include_HEADERS = \
  approx.h \
  croquis.h \
  exception.h \
  file.h \
  hash.h \
  header.h \
  random.h \
  sketch.h \
  util.h
